--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ img {
   margin-top: 0.5rem;
 }
 
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .-mt-16 {
   margin-top: -4rem;
 }
@@ -305,6 +309,10 @@ img {
   padding-bottom: 1rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .pb-16 {
   padding-bottom: 4rem;
 }
@@ -418,7 +426,7 @@ img {
 @media (min-width: 768px) {
 
   .md\:p-12 {
-    padding: 3rem;
+    padding: 2rem;
   }
 }
 
@@ -492,6 +500,11 @@ img {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
+
+  /* .hatelove {
+    margin-top: 10
+    px;
+  } */
 }
 
 @media (min-width: 1280px) {
